--- a/pages/merchant/apply/index/index.wxml
+++ b/pages/merchant/apply/index/index.wxml
@@ -28,7 +28,18 @@
             <input bindinput="onInputChange" data-field="phone" value="{{phone}}" placeholder="请输入联系电话" class="merchant-submits-apply-info-input-input" placeholder-style="color:#CCCCCC" />
           </view>
         </view>
-
+        <view class="merchant-submits-apply-info">
+          <text class="merchant-submits-apply-info-txt">身份证号</text>
+          <view class="merchant-submits-apply-info-input">
+            <input bindinput="onInputChange" data-field="idCard" value="{{idCard}}" placeholder="请输入身份证号" class="merchant-submits-apply-info-input-input" placeholder-style="color:#CCCCCC" />
+          </view>
+        </view>
+        <view class="merchant-submits-apply-info">
+          <text class="merchant-submits-apply-info-txt">邮箱</text>
+          <view class="merchant-submits-apply-info-input">
+            <input bindinput="onInputChange" data-field="email" value="{{email}}" placeholder="请输入邮箱" class="merchant-submits-apply-info-input-input" placeholder-style="color:#CCCCCC" />
+          </view>
+        </view>
         <view class="merchant-submits-apply-info">
           <text class="merchant-submits-apply-info-txt">省市区</text>
           <picker mode="region" value="{{region}}" bindchange="bindRegionChange" class="merchant-submits-apply-city">
@@ -48,7 +59,7 @@
         <view class="merchant-submits-apply-info">
           <text class="merchant-submits-apply-info-txt">品牌介绍</text>
           <view class="merchant-submits-apply-info-textarea">
-            <textarea bindinput="onInputChange" data-field="recommendation" value="{{recommendation}}" placeholder="品牌详细介绍" class="merchant-submits-apply-info-input-input" placeholder-style="color:#CCCCCC" />
+            <textarea bindinput="onRecommendationInput" value="{{recommendation}}" placeholder="品牌详细介绍" class="merchant-submits-apply-info-input-input" auto-height />
           </view>
         </view>
       </view>
