--- a/pages/my/index.wxml
+++ b/pages/my/index.wxml
@@ -137,11 +137,11 @@
         <view class="my-list-wrap-item">
           <text class="my-list-wrap-item-name">更多</text>
           <view class="my-list-wrap-item-list">
-            <view bindtap="navigate" data-url='/pages/merchant/apply/index/index' class="my-list-wrap-item-list-item">
+            <view bindtap="navigate" data-url='/pages/merchant/apply/list/index' class="my-list-wrap-item-list-item">
               <image style="width: 50rpx; height: 50rpx;" src="/assets/images/my/woyaodaili.png" class="my-list-wrap-item-list-item-img"></image>
-              <text class="my-list-wrap-item-list-item-txt">我要代理</text>
+              <text class="my-list-wrap-item-list-item-txt">商家入驻</text>
             </view>
-            <view bindtap="navigate" data-url='/pages/store/apply/list/index' class="my-list-wrap-item-list-item">
+            <view bindtap="toStore" data-url='/pages/store/apply/list/index' class="my-list-wrap-item-list-item">
               <image style="width: 50rpx; height: 50rpx;" src="/assets/images/my/shangjiaruzhu.png" class="my-list-wrap-item-list-item-img"></image>
               <text class="my-list-wrap-item-list-item-txt">商铺入驻</text>
             </view>
