--- a/pages/pay/index/index.wxss
+++ b/pages/pay/index/index.wxss
@@ -95,7 +95,7 @@
   padding-top: 24rpx;
   padding-right: 20rpx;
   padding-bottom: 34rpx;
-  padding-left: 58rpx;
+  padding-left: 36rpx;
   display: flex;
   flex-direction: column;
 }
@@ -349,4 +349,110 @@
   color: #fff;
   background-color: #F02230;
   border-radius: 12rpx;
+}
+
+.merchant-submits-apply-info-input {
+  width: 100%;
+  height: 80rpx;
+  border-radius: 12rpx;
+  border: 2rpx solid rgb(221, 221, 221);
+  display: flex;
+  align-items: center;
+  box-sizing: border-box;
+}
+.merchant-submits-apply-info-textarea{
+  width: 100%;
+  /* height:300rpx; */
+  height:auto!important;
+  _height:80rpx;
+  min-height:80rpx;
+  border-radius: 12rpx;
+  border: 2rpx solid rgb(221, 221, 221);
+  display: flex;
+  align-items: center;
+  box-sizing: border-box;
+}
+
+.merchant-submits-apply-info-input-input {
+  padding: 0;
+  margin: 0;
+  outline: none;
+  border: none;
+  width: calc(100% - 60rpx);
+  height: 100%;
+  box-sizing: border-box;
+  padding-left: 22rpx;
+  font-size: 30rpx;
+  /* line-height: 80rpx; */
+
+}
+
+.merchant-submits-apply-info-input-close {
+  width: 30rpx;
+  height: 30rpx;
+  border-radius: 50%;
+  background-color: #C6C6C6;
+  line-height: 30rpx;
+  text-align: center;
+  color: #fff;
+  font-size: 28rpx;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.merchant-submits-apply-info-input uni-picker {
+  padding: 0;
+  margin: 0;
+  outline: none;
+  border: none;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  padding-left: 22rpx;
+  font-size: 30rpx;
+  line-height: 80rpx;
+  position: relative;
+}
+
+.merchant-submits-apply-info-input uni-picker::after {
+  content: "";
+  position: absolute;
+  right: 20rpx;
+  top: 50%;
+  width: 20rpx;
+  height: 20rpx;
+  border-left: 5rpx solid #C6C6C6;
+  border-top: 5rpx solid #C6C6C6;
+  transform: translate3d(0, -50%, 0) rotateZ(225deg);
+  -webkit-transform: translate3d(0, -50%, 0) rotateZ(225deg);
+  margin-top: -4rpx;
+}
+
+.merchant-submits-apply-info-input picker {
+  padding: 0;
+  margin: 0;
+  outline: none;
+  border: none;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  padding-left: 22rpx;
+  font-size: 30rpx;
+  line-height: 80rpx;
+  position: relative;
+}
+
+.merchant-submits-apply-info-input picker::after {
+  content: "";
+  position: absolute;
+  right: 20rpx;
+  top: 50%;
+  width: 20rpx;
+  height: 20rpx;
+  border-left: 5rpx solid #C6C6C6;
+  border-top: 5rpx solid #C6C6C6;
+  transform: translate3d(0, -50%, 0) rotateZ(225deg);
+  -webkit-transform: translate3d(0, -50%, 0) rotateZ(225deg);
+  margin-top: -4rpx;
 }
